--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ node_modules/
 
 # Production
 /build
+dist/
 
 # Misc
 .DS_Store
@@ -25,9 +26,7 @@ yarn-error.log*
 # Local env files
 .env
 .env*.local
-.env.development.local
-.env.test.local
-.env.production.local
+backend/.env
 
 # Vercel
 .vercel
@@ -36,21 +35,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# Backend
-backend/node_modules/
-backend/.env
-
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-
-# OS
-Thumbs.db
-.DS_Store
-
-# Logs
-logs
-*.log
